fix: Wrap cards

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .pixelperfect {
@@ -222,8 +222,9 @@ body {
 .list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   gap: calc(var(--px, 1px) * 30);
   font-size: calc(var(--px, 1px) * 30);
   color: #fff;
